--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primary_400">#FF0056EA</color>
+    <color name="primary_400">#55CFFF</color>
     <color name="primary_900">#FF001CD2</color>
 </resources>
